--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,48 @@
-
 .DS_Store
+ActionScript/
+AppleScript/
+ASP/
+Batch File/
+C#/
+C++/
+Clojure/
+Color Scheme - Default/
+CSS/
+D/
+Default/
+Diff/
+Erlang/
+Go/
+Graphviz/
+Groovy/
+Haskell/
+HTML/
+Java/
+JavaScript/
+Language - English/
+LaTeX/
+Lisp/
+Lua/
+Makefile/
+Markdown/
+Matlab/
+Objective-C/
+OCaml/
+Perl/
+PHP/
+Python/
+R/
+Rails/
+Regular Expressions/
+RestructuredText/
+Ruby/
+Scala/
+ShellScript/
+SQL/
+TCL/
+Text/
+Textile/
+Theme - Default/
+Vintage/
+XML/
+YAML/
