--- a/PyV8/osx/config.json
+++ b/PyV8/osx/config.json
@@ -1,1 +1,1 @@
-{"skip_update": false, "last_update": 1353501887.592216, "last_id": 351216}
+{"skip_update": false, "last_update": 1353919202.2569389, "last_id": 351216}
