--- a/PyV8/osx/config.json
+++ b/PyV8/osx/config.json
@@ -1,1 +1,1 @@
-{"skip_update": false, "last_update": 1354614765.615145, "last_id": 351216}
+{"skip_update": false, "last_update": 1355409948.2980411, "last_id": 351216}
