--- a/PyV8/osx/config.json
+++ b/PyV8/osx/config.json
@@ -1,1 +1,1 @@
-{"skip_update": false, "last_update": 1363341257.184243, "last_id": "7b121bedb50a7a795681e0dd002206ade02353c0"}
+{"skip_update": false, "last_update": 1363960410.1688781, "last_id": "7b121bedb50a7a795681e0dd002206ade02353c0"}
