added preceding / to default packages

--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,52 @@
 .DS_Store
 *.pyc
-ActionScript/
-AppleScript/
-ASP/
-Batch File/
-C#/
-C++/
-Clojure/
-Color Scheme - Default/
-CSS/
-D/
-Default/
-Diff/
-Erlang/
-Go/
-Graphviz/
-Groovy/
-Haskell/
-HTML/
-Java/
-JavaScript/
-Language - English/
-LaTeX/
-Lisp/
-Lua/
-Makefile/
-Markdown/
-Matlab/
-Objective-C/
-OCaml/
-Perl/
-PHP/
-Python/
-R/
-Rails/
-Regular Expressions/
-RestructuredText/
-Ruby/
-Scala/
-ShellScript/
-SQL/
-TCL/
-Text/
-Textile/
-Theme - Default/
-Vintage/
-XML/
-YAML/
-User/Themes/Tomorrow/Colorized*
+/ActionScript/
+/AppleScript/
+/ASP/
+/Batch File/
+/C#/
+/C++/
+/Clojure/
+/Color Scheme - Default/
+/CSS/
+/D/
+/Default/
+/Diff/
+/Erlang/
+/Go/
+/Graphviz/
+/Groovy/
+/Haskell/
+/HTML/
+/Java/
+/JavaScript/
+/Language - English/
+/LaTeX/
+/Lisp/
+/Lua/
+/Makefile/
+/Markdown/
+/Matlab/
+/Objective-C/
+/OCaml/
+/Perl/
+/PHP/
+/Python/
+/R/
+/Rails/
+/Regular Expressions/
+/RestructuredText/
+/Ruby/
+/Scala/
+/ShellScript/
+/SQL/
+/TCL/
+/Text/
+/Textile/
+/Theme - Default/
+/Vintage/
+/XML/
+/YAML/
+/User/Themes/Tomorrow/Colorized*
 Package Control.last-run
 *.tmTheme.cache
