--- a/PyV8/osx/config.json
+++ b/PyV8/osx/config.json
@@ -1,1 +1,1 @@
-{"skip_update": false, "last_update": 1366011507.0654149, "last_id": "156096456024e99193094adc3bf24aa589275cc8"}
+{"skip_update": false, "last_update": 1366714636.017576, "last_id": "156096456024e99193094adc3bf24aa589275cc8"}
